AbyssalCraft 1.9.1-pre-1
*Demon Animals now have a 50% chance of not burning when spawning in the
Nether
*Added a mimic fire (exstinguishes after 6 seconds, can't be sustained
by netherrack)
*Integrations no longer need to be registered (added a plugin annotation
that allows for 100% soft dependencies)
*Fixed animations for the Dreadium Samurai Armor (arms should move
correctly, and armor renders correctly on Armor Stands)
*Improved the buttons in the Necronomicon GUI (they don't overlay
anymore, and a transparent gradient displays on a button when hovered
over)
*Fixed potential crashes related to CraftingStacks where the recipe uses
the OreDictionary
*Automatically fetched crafting recipes will now also fetch the output
quantity from the recipe
*Sacthoth no longer spawns in the Dark Realm
*Added a Misc Information section to the Necronomicon (displays things
not mentioned anywhere else, among them crafting recipes)
*The range from J'zahar in which you need to be in order for him to drop
his essence has been increased to 32 blocks (previously 10)
*Ported to Minecraft 1.9 (there may be bugs left from the port)
*All boss health bars now uses the new system (and they also change
color depending on how much health the boss has)